--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react-jsx",
     "incremental": true,
 
-    "baseUrl": ".",               // ✅ REQUIRED
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
